Added bib citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -25,3 +25,23 @@ url = {http://doi.wiley.com/10.1111/j.2041-210x.2012.00261.x},
 volume = {4},
 year = {2013}
 }
+
+@book{Tukey1977,
+author = {Tukey, John W.},
+publisher = {Reading, Mass.: Addison-Wesley Pub.},
+title = {{Exploratory data analysis}},
+year = {1977}
+}
+
+@article{Koller2016,
+author = {Koller, Manuel},
+doi = {10.18637/jss.v075.i06},
+file = {:C$\backslash$:/Users/jamia/Box/Mendeley Desktop/Koller - 2016 - robustlmm An R Package for Robust Estimation of Linear Mixed-Effects Models.pdf:pdf},
+issn = {1548-7660},
+journal = {Journal of Statistical Software},
+number = {6},
+title = {{robustlmm : An R Package for Robust Estimation of Linear Mixed-Effects Models}},
+url = {http://www.jstatsoft.org/v75/i06/},
+volume = {75},
+year = {2016}
+}
